kdelibs (4:2.2.1-1) unstable; urgency=low
 
  * New upstream version
  * Move artsc-config into -dev package (Closes: #109973)
  * Priority set to extra for -alsa packages
  * Do NOT build with Xinerama support due to the library being static
    and that whole PIC/non-PIC so thing. 
  * Fix ctrl+s (Closes: #110694)
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sat, 25 Aug 2001 05:40:00 -0700

kdelibs (4:2.2.0-final-3) unstable; urgency=low
 
  * Sync with upstream
  * Fix a couple more deps/build-deps
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Wed, 22 Aug 2001 10:59:00 -0700

kdelibs (4:2.2.0-final-2) unstable; urgency=low
 
  * update build-depends for i386
  * Updated translation bits
  * sync with upstream

 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 19 Aug 2001 00:01:00 -0700

kdelibs (4:2.2.0-final-1) unstable; urgency=low
 
  * New upstream version 2.2
  * Build with objprelink for i386
  * update build-depends
  * do not build with xinerama support for hppa
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sat, 04 Aug 2001 02:30:00 -0700

kdelibs (4:2.2.0-0.1beta1-2) unstable; urgency=low
 
  * synce with upstream
  * more https related fixes
  * Fix shlibs
  * Fix build issues with new libxml2-dev (Closes: #106766)
  * fix postrm of kdelibs-dev
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 27 Jul 2001 12:18:00 -0700

kdelibs (4:2.2.0-0.1beta1-1) unstable; urgency=low
 
  * synce with upstream
  * Drop optimization down for cross arch building
  * Move libkscreensaver.so over to -dev package where it belongs
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Wed, 25 Jul 2001 03:35:00 -0700

kdelibs (4:2.2.0-0beta1-6) unstable; urgency=low
 
  * synce with upstream
  * Update debhelper templates for alpha build bits
  * Update/Clean/Fix various dependency issues
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 08 Jul 2001 00:53:00 -0700

kdelibs (4:2.2.0-0beta1-5) unstable; urgency=low
 
  * synce with upstream
  * Add -mieee for Alpha builds